care-australia-uat/force-app/main/default/objects/RG_Processing_Batch__c/RG_Processing_Batch__c.object-meta.xml
<CustomObject>
    <description>Processing recurring donation payment jobs.</description>
    <label>RG Processing Batch</label>
    <nameField>
        <displayFormat>RGP{0000000}</displayFormat>
        <label>RG Processing Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RG Processing Batchs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>