care-australia-uat/force-app/main/default/objects/RG_Processing_Batch__c/fields/Batch_Status__c.field-meta.xml
<CustomField>
    <fullName>Batch_Status__c</fullName>
    <label>Batch Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Authorized</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Fail Soft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>