care-australia-uat/force-app/main/default/objects/RG_Processing_Batch__c/fields/Batch_Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Batch_Unique_Identifier__c</fullName>
    <label>Batch Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>