care-australia-uat/force-app/main/default/objects/RG_Processing_Batch__c/fields/Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Status_Description__c</fullName>
    <label>Status Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>