care-australia-uat/force-app/main/default/objects/RG_Processing_Batch__c/fields/Total_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Total_Transactions__c</fullName>
    <label>Total Transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>