care-australia-uat/force-app/main/default/objects/RG_Processing_Batch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Batch_Unique_Identifier__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Batch_Status__c</columns>
    <columns>Status_Description__c</columns>
    <columns>Total_Transactions__c</columns>
    <columns>Total_Processed_Transactions__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>