care-australia-uat/force-app/main/default/objects/RG_Processing_Batch__c/listViews/RG_Processing_with_Columns.listView-meta.xml
<ListView>
    <fullName>RG_Processing_with_Columns</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Total_Processed_Transactions__c</columns>
    <columns>Total_Transactions__c</columns>
    <columns>Status_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>RG Processing with Columns</label>
</ListView>